--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run  build && scp -r ./build/* frankieag10@35.236.26.26:/home/frankieag10/frontend"
   },
   "eslintConfig": {
     "extends": [
